--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
